@@ -7,8 +7,8 @@ lib_LTLIBRARIES = libzebra.la
 libzebra_la_LDFLAGS = -version 0:0:0
 
 libzebra_la_SOURCES = \
-	version.c network.c pid_output.c getopt.c getopt1.c daemon.c \
-	print_version.c checksum.c vector.c linklist.c vty.c command.c \
+	network.c pid_output.c getopt.c getopt1.c daemon.c \
+	checksum.c vector.c linklist.c vty.c command.c \
 	sockunion.c prefix.c thread.c if.c memory.c buffer.c table.c hash.c \
 	filter.c routemap.c distribute.c stream.c str.c log.c plist.c \
 	zclient.c sockopt.c smux.c md5.c if_rmap.c keychain.c privs.c \
@@ -27,6 +27,3 @@ pkginclude_HEADERS = \
 
 EXTRA_DIST = regex.c regex-gnu.h
 
-version.c: Makefile
-	echo '' >version.c
-	echo 'const char *host_name = "$(host_alias)";' >>version.c
